# ost-app

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  VERSIONS.md  docker-compose.yml  pyproject.toml  tickets
.feedback/: README.md
brand/: HANDOFF.md  README.md  site.webmanifest  tokens.css
docs/: ost_recipe.md  requirements.md
docs/skills/: ATTRIBUTION.md  okr-templates.md  okr.md  opportunity-solution-tree.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/brand/: BrandMark.tsx  Wordmark.tsx
frontend/src/components/chat/: ChatPanel.tsx  ToolActivityIndicator.tsx
frontend/src/components/feedback/: FeedbackButton.tsx
frontend/src/components/git/: GitCommitDialog.tsx  GitPanel.tsx
frontend/src/components/panels/: ActivityPanel.tsx  ContextPanel.tsx  HistoryPanel.tsx  MembersSection.tsx  NodeDetailPanel.tsx  SnapshotDiffViewer.tsx  TreeSelector.tsx  VersionPanel.tsx
frontend/src/components/panels/detail/: AddChildForm.tsx  DeleteConfirmInline.tsx  InlineEditableText.tsx  MiniTreeDiagram.tsx  NodeTagsSection.tsx
frontend/src/components/settings/: SettingsDialog.tsx
frontend/src/components/tree/: HypothesisEdge.tsx  NodeStyleDialog.tsx  OSTNode.tsx  TreeCanvas.tsx
frontend/src/components/ui/: ColorPicker.tsx  RichTextEditor.tsx  tree-icon.tsx
frontend/src/hooks/: use-permissions.ts  use-tree-polling.ts  use-tree.ts
frontend/src/lib/: api-client.ts  colors.ts  fill-patterns.ts  markdown-to-html.ts  snapshot-diff.ts  tree-layout.ts  types.ts
frontend/src/stores/: auth-store.ts  tree-store.ts
promo/: cli_terminal.html  populate_demo.py
services/api/: pyproject.toml
services/api/src/ost_api/: __init__.py  deps.py  main.py
services/api/src/ost_api/routers/: auth.py  chat.py  edges.py  feedback.py  git.py  members.py  nodes.py  projects.py  settings.py  tags.py  trees.py  validation.py
services/api/tests/: test_api.py
services/cli/: pyproject.toml
services/cli/src/ost_cli/: __init__.py  main.py
services/cli/tests/: test_cli.py
test/: test.json
