[project]
name = "ost-workspace"
version = "0.1.0"
description = "Opportunity Solution Tree — full-stack app for product discovery"
requires-python = ">=3.12"
dependencies = [
    "python-multipart==0.0.27",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.1",
]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.pytest.ini_options]
testpaths = [
    "packages/ost_core/tests",
    "services/api/tests",
    "services/cli/tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
