[project]
name = "ost-api"
version = "0.1.0"
description = "FastAPI REST API for Opportunity Solution Trees"
requires-python = ">=3.12"
dependencies = [
    "ost-core",
    "fastapi==0.133.1",
    "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ost_api"]

[tool.uv.sources]
ost-core = { workspace = true }
