[project]
name = "ost-cli"
version = "0.1.0"
description = "CLI tool for Opportunity Solution Trees"
requires-python = ">=3.12"
dependencies = [
    "ost-core",
    "typer==0.24.1",
    "rich==14.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ost = "ost_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ost_cli"]

[tool.uv.sources]
ost-core = { workspace = true }
